# SuitDesign

./: CodeDict.txt  ComponentExtractor.cp36-win_amd64.pyd  Design.py  Design2.py  Design3NoMargin.py  FontTest.py  PatternSizeTest.psd  README.md  Template1_clean.psd  VisualizeNotCodeCorners.py
Production1/: suitRandomizedNewCodes_codeset.txt
Production2/: suitNoMargin.txt
Production3/: suitNoMargin.txt  suitNoMarginDalition1_5.json  suitNoMarginDalition1_5_HandFixed.json  suitNoMarginDalition1_5_withNoCodeCorner.json
PyComponentExtractor/: CMakeLists.txt  ComponentExtractor.cpp  PyTest.py
Template1/: suitRandomizedCodesBlackAndWhite_codeset.txt  suitRandomizedCodesNonbold_codeset.txt
